<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
   android:background="#1D1237"
    tools:context=".EducationalActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="30sp"
    android:padding="10dp"
    android:paddingLeft="50dp"
    android:gravity="center"
    android:textColor="#8BC34A"
    android:layout_marginBottom="50dp"
    android:textStyle="bold"
    android:text="Top Six Educational Site"
    />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ab1"
        android:autoLink="web"
        android:background="#fff"
        android:textColor="#4CAF50"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:text="@string/ab2"
        android:textColor="#4CAF50"
        android:layout_marginBottom="10dp"
        android:autoLink="web"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ab3"
        android:autoLink="web"
        android:layout_marginBottom="10dp"
        android:textColor="#4CAF50"
        android:background="#fff"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:textColor="#4CAF50"
        android:text="@string/ab4"
        android:autoLink="web"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#fff"
        android:text="@string/ab5"
        android:autoLink="web"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#4CAF50"
        android:layout_marginBottom="10dp"
        android:background="#fff"
        android:text="@string/ab6"
        android:autoLink="web"
        android:textSize="25sp"/>


</LinearLayout>